goal/target-maven/generated-sources/antlr4/IStarParser.java
// Generated from IStar.g4 by ANTLR 4.9.3
 package org.vnu.sme.goal.istar.parser; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IStarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, OCL_CLAUSE=42, OCL_BLOCK=43, IDENT=44, WS=45, 
		LINE_COMMENT=46, BLOCK_COMMENT=47;
	public static final int
		RULE_model = 0, RULE_actorDef = 1, RULE_actorKind = 2, RULE_actorBody = 3, 
		RULE_goalType = 4, RULE_goalTypeName = 5, RULE_obstacleType = 6, RULE_obstacleTypeName = 7, 
		RULE_rel = 8, RULE_dependency = 9, RULE_dependumRef = 10, RULE_dependumKind = 11, 
		RULE_depEnd = 12, RULE_contribType = 13, RULE_oclCondition = 14, RULE_goalCondition = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"model", "actorDef", "actorKind", "actorBody", "goalType", "goalTypeName", 
			"obstacleType", "obstacleTypeName", "rel", "dependency", "dependumRef", 
			"dependumKind", "depEnd", "contribType", "oclCondition", "goalCondition"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'istar'", "'{'", "'}'", "'role'", "'agent'", "'goal'", "'task'", 
			"'resource'", "'quality'", "'obstacle'", "'is-a'", "'participates-in'", 
			"':'", "'Achieve'", "'Maintain'", "'Avoid'", "'Prevention'", "'Restoration'", 
			"'Mitigation'", "'>'", "'or'", "'forall'", "'pick'", "'qualifies'", "'needed-by'", 
			"'obstructs'", "'resolves'", "'depend'", "'->'", "'.'", "'make'", "'help'", 
			"'hurt'", "'break'", "'pre'", "'post'", "'trigger'", "'satisfy'", "'while'", 
			"'ensure'", "'release'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "OCL_CLAUSE", "OCL_BLOCK", "IDENT", 
			"WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IStar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IStarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ModelContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(IStarParser.IDENT, 0); }
		public TerminalNode EOF() { return getToken(IStarParser.EOF, 0); }
		public List<ActorDefContext> actorDef() {
			return getRuleContexts(ActorDefContext.class);
		}
		public ActorDefContext actorDef(int i) {
			return getRuleContext(ActorDefContext.class,i);
		}
		public List<DependencyContext> dependency() {
			return getRuleContexts(DependencyContext.class);
		}
		public DependencyContext dependency(int i) {
			return getRuleContext(DependencyContext.class,i);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).exitModel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IStarVisitor ) return ((IStarVisitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(T__0);
			setState(33);
			match(IDENT);
			setState(34);
			match(T__1);
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3 || _la==T__4) {
				{
				{
				setState(35);
				actorDef();
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__27) {
				{
				{
				setState(41);
				dependency();
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47);
			match(T__2);
			setState(48);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorDefContext extends ParserRuleContext {
		public ActorKindContext actorKind() {
			return getRuleContext(ActorKindContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(IStarParser.IDENT, 0); }
		public List<ActorBodyContext> actorBody() {
			return getRuleContexts(ActorBodyContext.class);
		}
		public ActorBodyContext actorBody(int i) {
			return getRuleContext(ActorBodyContext.class,i);
		}
		public ActorDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).enterActorDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).exitActorDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IStarVisitor ) return ((IStarVisitor<? extends T>)visitor).visitActorDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActorDefContext actorDef() throws RecognitionException {
		ActorDefContext _localctx = new ActorDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_actorDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			actorKind();
			setState(51);
			match(IDENT);
			setState(52);
			match(T__1);
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << IDENT))) != 0)) {
				{
				{
				setState(53);
				actorBody();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorKindContext extends ParserRuleContext {
		public ActorKindContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorKind; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).enterActorKind(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).exitActorKind(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IStarVisitor ) return ((IStarVisitor<? extends T>)visitor).visitActorKind(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActorKindContext actorKind() throws RecognitionException {
		ActorKindContext _localctx = new ActorKindContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_actorKind);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_la = _input.LA(1);
			if ( !(_la==T__3 || _la==T__4) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorBodyContext extends ParserRuleContext {
		public ActorBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorBody; }
	 
		public ActorBodyContext() { }
		public void copyFrom(ActorBodyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BodyIsAContext extends ActorBodyContext {
		public List<TerminalNode> IDENT() { return getTokens(IStarParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(IStarParser.IDENT, i);
		}
		public BodyIsAContext(ActorBodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).enterBodyIsA(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).exitBodyIsA(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IStarVisitor ) return ((IStarVisitor<? extends T>)visitor).visitBodyIsA(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BodyObstacleContext extends ActorBodyContext {
		public TerminalNode IDENT() { return getToken(IStarParser.IDENT, 0); }
		public ObstacleTypeContext obstacleType() {
			return getRuleContext(ObstacleTypeContext.class,0);
		}
		public List<RelContext> rel() {
			return getRuleContexts(RelContext.class);
		}
		public RelContext rel(int i) {
			return getRuleContext(RelContext.class,i);
		}
		public BodyObstacleContext(ActorBodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).enterBodyObstacle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).exitBodyObstacle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IStarVisitor ) return ((IStarVisitor<? extends T>)visitor).visitBodyObstacle(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BodyParticipatesContext extends ActorBodyContext {
		public List<TerminalNode> IDENT() { return getTokens(IStarParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(IStarParser.IDENT, i);
		}
		public BodyParticipatesContext(ActorBodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).enterBodyParticipates(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).exitBodyParticipates(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IStarVisitor ) return ((IStarVisitor<? extends T>)visitor).visitBodyParticipates(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BodyGoalContext extends ActorBodyContext {
		public TerminalNode IDENT() { return getToken(IStarParser.IDENT, 0); }
		public GoalTypeContext goalType() {
			return getRuleContext(GoalTypeContext.class,0);
		}
		public List<RelContext> rel() {
			return getRuleContexts(RelContext.class);
		}
		public RelContext rel(int i) {
			return getRuleContext(RelContext.class,i);
		}
		public List<GoalConditionContext> goalCondition() {
			return getRuleContexts(GoalConditionContext.class);
		}
		public GoalConditionContext goalCondition(int i) {
			return getRuleContext(GoalConditionContext.class,i);
		}
		public BodyGoalContext(ActorBodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).enterBodyGoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).exitBodyGoal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IStarVisitor ) return ((IStarVisitor<? extends T>)visitor).visitBodyGoal(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BodyResourceContext extends ActorBodyContext {
		public TerminalNode IDENT() { return getToken(IStarParser.IDENT, 0); }
		public List<RelContext> rel() {
			return getRuleContexts(RelContext.class);
		}
		public RelContext rel(int i) {
			return getRuleContext(RelContext.class,i);
		}
		public BodyResourceContext(ActorBodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).enterBodyResource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).exitBodyResource(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IStarVisitor ) return ((IStarVisitor<? extends T>)visitor).visitBodyResource(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BodyQualityContext extends ActorBodyContext {
		public TerminalNode IDENT() { return getToken(IStarParser.IDENT, 0); }
		public List<RelContext> rel() {
			return getRuleContexts(RelContext.class);
		}
		public RelContext rel(int i) {
			return getRuleContext(RelContext.class,i);
		}
		public BodyQualityContext(ActorBodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).enterBodyQuality(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).exitBodyQuality(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IStarVisitor ) return ((IStarVisitor<? extends T>)visitor).visitBodyQuality(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BodyTaskContext extends ActorBodyContext {
		public TerminalNode IDENT() { return getToken(IStarParser.IDENT, 0); }
		public List<RelContext> rel() {
			return getRuleContexts(RelContext.class);
		}
		public RelContext rel(int i) {
			return getRuleContext(RelContext.class,i);
		}
		public List<OclConditionContext> oclCondition() {
			return getRuleContexts(OclConditionContext.class);
		}
		public OclConditionContext oclCondition(int i) {
			return getRuleContext(OclConditionContext.class,i);
		}
		public BodyTaskContext(ActorBodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).enterBodyTask(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).exitBodyTask(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IStarVisitor ) return ((IStarVisitor<? extends T>)visitor).visitBodyTask(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActorBodyContext actorBody() throws RecognitionException {
		ActorBodyContext _localctx = new ActorBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_actorBody);
		int _la;
		try {
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				_localctx = new BodyGoalContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				match(T__5);
				setState(64);
				match(IDENT);
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__12) {
					{
					setState(65);
					goalType();
					}
				}

				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__19) {
					{
					{
					setState(68);
					rel();
					}
					}
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << OCL_CLAUSE))) != 0)) {
					{
					{
					setState(74);
					goalCondition();
					}
					}
					setState(79);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				_localctx = new BodyTaskContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				match(T__6);
				setState(81);
				match(IDENT);
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__19) {
					{
					{
					setState(82);
					rel();
					}
					}
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__34) | (1L << T__35) | (1L << OCL_CLAUSE))) != 0)) {
					{
					{
					setState(88);
					oclCondition();
					}
					}
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 3:
				_localctx = new BodyResourceContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				match(T__7);
				setState(95);
				match(IDENT);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__19) {
					{
					{
					setState(96);
					rel();
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 4:
				_localctx = new BodyQualityContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(102);
				match(T__8);
				setState(103);
				match(IDENT);
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__19) {
					{
					{
					setState(104);
					rel();
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 5:
				_localctx = new BodyObstacleContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(110);
				match(T__9);
				setState(111);
				match(IDENT);
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__12) {
					{
					setState(112);
					obstacleType();
					}
				}

				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__19) {
					{
					{
					setState(115);
					rel();
					}
					}
					setState(120);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 6:
				_localctx = new BodyIsAContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(121);
				match(IDENT);
				setState(122);
				match(T__10);
				setState(123);
				match(IDENT);
				}
				break;
			case 7:
				_localctx = new BodyParticipatesContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(124);
				match(IDENT);
				setState(125);
				match(T__11);
				setState(126);
				match(IDENT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GoalTypeContext extends ParserRuleContext {
		public GoalTypeNameContext goalTypeName() {
			return getRuleContext(GoalTypeNameContext.class,0);
		}
		public GoalTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goalType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).enterGoalType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).exitGoalType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IStarVisitor ) return ((IStarVisitor<? extends T>)visitor).visitGoalType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalTypeContext goalType() throws RecognitionException {
		GoalTypeContext _localctx = new GoalTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_goalType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(T__12);
			setState(130);
			goalTypeName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GoalTypeNameContext extends ParserRuleContext {
		public GoalTypeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goalTypeName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).enterGoalTypeName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).exitGoalTypeName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IStarVisitor ) return ((IStarVisitor<? extends T>)visitor).visitGoalTypeName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalTypeNameContext goalTypeName() throws RecognitionException {
		GoalTypeNameContext _localctx = new GoalTypeNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_goalTypeName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__14) | (1L << T__15))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObstacleTypeContext extends ParserRuleContext {
		public ObstacleTypeNameContext obstacleTypeName() {
			return getRuleContext(ObstacleTypeNameContext.class,0);
		}
		public ObstacleTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obstacleType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).enterObstacleType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).exitObstacleType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IStarVisitor ) return ((IStarVisitor<? extends T>)visitor).visitObstacleType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObstacleTypeContext obstacleType() throws RecognitionException {
		ObstacleTypeContext _localctx = new ObstacleTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_obstacleType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(T__12);
			setState(135);
			obstacleTypeName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObstacleTypeNameContext extends ParserRuleContext {
		public ObstacleTypeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obstacleTypeName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).enterObstacleTypeName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IStarListener ) ((IStarListener)listener).exitObstacleTypeName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IStarVisitor ) return ((IStarVisitor<? extends T>)visitor).visitObstacleTypeName(this);
			else return visitor.visitChildren(this);
		}
	}
